# HW_3

./: multiprocess_factorize.py  pyproject.toml
